2003-03-28  Frank Ch. Eigler  <fche@redhat.com>
	* configure.in: Check for target gettimeofday, signal, some headers.
	* mf-impl.h (__mf_opts): Add new "sigusr1_report" field.  Comment
	out inop multi_threaded field.
	* mf-runtime.c (options): Handle new "-sigusr1-report" option.
	(__mf_set_options): Correct handling of "-help".
	(__mf_sigusr1_respond): New function to manage SIGUSR1 response.
	(__mf_check, __mf_register, __mf_unregister): Call it.
	(__mf_insert_new_object, __mf_unregister): Respect HAVE_GETTIMEOFDAY.
	(__mf_report_leaks): Make callable
	(__mf_tree_analyze): Traverse in-order.  Accumulate address bit
	distribution statistics.
	(__mf_adapt_cache): Rewrite shift guessing logic based on address
	bit distributions.
	* config.h.in, configure: Regenerated.
	* testsuite/libmudflap.c/fail27-frag.c: New test.
	* testsuite/libmudflap.c/pass36-frag.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@64989 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libmudflap/configure.in
+++ b/libmudflap/configure.in
@@ -25,11 +25,10 @@ AM_PROG_LIBTOOL
 AC_SUBST(enable_shared)
 AC_SUBST(enable_static)
 
-dnl Should check for this header for the host/target, not the build platform
 AC_CHECK_HEADER(stdint.h, [MF_HAVE_STDINT_H=1], [MF_HAVE_STDINT_H=0])
 AC_SUBST(MF_HAVE_STDINT_H)
-AC_CHECK_HEADERS(stdint.h execinfo.h)
-AC_CHECK_FUNCS(backtrace backtrace_symbols)
+AC_CHECK_HEADERS(stdint.h execinfo.h signal.h)
+AC_CHECK_FUNCS(backtrace backtrace_symbols gettimeofday signal)
 
 if ${CONFIG_SHELL-/bin/sh} ./libtool --tag CC --features |
    grep "enable shared" > /dev/null; then
