--- a/libmudflap/config.h.in
+++ b/libmudflap/config.h.in
@@ -6,11 +6,17 @@
 /* Define if you have the backtrace_symbols function.  */
 #undef HAVE_BACKTRACE_SYMBOLS
 
-/* Define if you have the <dlfcn.h> header file.  */
-#undef HAVE_DLFCN_H
+/* Define if you have the gettimeofday function.  */
+#undef HAVE_GETTIMEOFDAY
+
+/* Define if you have the signal function.  */
+#undef HAVE_SIGNAL
 
 /* Define if you have the <execinfo.h> header file.  */
 #undef HAVE_EXECINFO_H
+
+/* Define if you have the <signal.h> header file.  */
+#undef HAVE_SIGNAL_H
 
 /* Define if you have the <stdint.h> header file.  */
 #undef HAVE_STDINT_H
