2003-03-31  Frank Ch. Eigler  <fche@redhat.com>
	* gcc.c (MFLIB_SPEC): Remove -ld.
	(MFWRAP_SPEC): Remove dlopen wrapping.

2003-03-31  Frank Ch. Eigler  <fche@redhat.com>

	* Makefile.am (AM_CFLAGS): Remove optimization flags.
	(HOOKOBJS): Remove dlopen hook.
	(libmudflap_la_LIBADD): Add -ldl.
	* mf-hooks.c (dlopen): Remove hook.
	* mf-impl.h (__mf_dynamic): Ditto.
	* mf-runtime.c (__mf_resolve_dynamics): Ditto.
	* Makefile.in: Regenerated.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@65113 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libmudflap/Makefile.am
+++ b/libmudflap/Makefile.am
@@ -8,7 +8,7 @@ AUTOMAKE_OPTIONS = 1.3 foreign
 MAINT_CHARSET = latin1
 SUBDIRS = testsuite
 
-AM_CFLAGS = -ansi -Wall -O3 -g -freorder-blocks
+AM_CFLAGS = -ansi -Wall
 
 lib_LTLIBRARIES = libmudflap.la
 include_HEADERS = mf-runtime.h
@@ -49,7 +49,6 @@ HOOKOBJS = \
  bcmp-hook.lo \
  index-hook.lo \
  rindex-hook.lo \
- dlopen-hook.lo \
  mmap-hook.lo \
  munmap-hook.lo \
  alloca-hook.lo
@@ -60,7 +59,7 @@ $(HOOKOBJS): mf-hooks.c mf-runtime.h mf-impl.h
 	$(LTCOMPILE) -DWRAP_$$hook -c $(srcdir)/mf-hooks.c -o $@
 
 libmudflap_la_LDFLAGS = 
-libmudflap_la_LIBADD = $(HOOKOBJS)
+libmudflap_la_LIBADD = $(HOOKOBJS) -ldl
 libmudflap_la_DEPENDENCIES = $(libmudflap_la_LIBADD)
 
 
