2004-04-04  Andrew MacLeod  <amacleod@redhat.com>
	* Makefile.in : Add tree-ssa-live.c and tree-ssa-live.h files.
	* tree-ssa.c (struct _var_map, create_var_map, delete_var_map,
	var_from_partition, get_var_partition, mapped_var_from_ref,
	compact_var_map, dump_tree_partition, set_partition_for_var,
	set_var_mapping, create_var_partition): Remove.
	(create_temp): Allow temps to be created from SSA_NAME vars as well.
	(eliminate_name, eliminate_build, elim_backward, elim_create,
	eliminate_phi): Use new var map interface.
	(coalesce_ssa_name): New. Coalesce ssa_name ranges together.
	(assign_vars): Assign real variables to ssa_name partitions.
	(rewrite_out_of_ssa): Use new varmap partition and routines.
	* tree-ssa-live.h: New file
	(var_map): Structure for variable map.
	(num_var_partitions): Number of partitions.
	(partition_to_var): Return variable for partition.
	(var_to_partition): Return partition variable is in.
	(var_to_partition_to_var): Return variable representing partition
	another variable is in.
	(register_ssa_partition): Initialize a partition element as used.
	* tree-ssa-live.c: New file.
	(init_var_map): Initialize a var_map.
	(delete_var_map): Free storage for a var_map.
	(var_union): Combine 2 partitions.
	(compact_var_map): Reduce the number of partitions in a var_map.
	(change_partition_var): Assign a specific var to a partition.
	(create_ssa_var_map): Initialize a var_map with referenced variables.
	(dump_var_map): Debug outout for a var_map.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@65246 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -786,7 +786,7 @@ C_OBJS = c-parse.o c-lang.o $(C_AND_OBJC_OBJS)
 OBJS = tree-cfg.o tree-dfa.o tree-ssa.o tree-optimize.o tree-simple.o      \
  tree-alias-type.o gimplify.o tree-nomudflap.o tree-pretty-print.o         \
  tree-alias-common.o tree-ssa-ccp.o tree-browser.o @ANDER@ tree-ssa-dce.o  \
- tree-ssa-pre.o tree-ssa-copyprop.o                                        \
+ tree-ssa-pre.o tree-ssa-copyprop.o tree-ssa-live.o 			   \
  alias.o bb-reorder.o bitmap.o builtins.o caller-save.o calls.o	           \
  cfg.o cfganal.o cfgbuild.o cfgcleanup.o cfglayout.o cfgloop.o		   \
  cfgloopanal.o cfgloopmanip.o loop-init.o loop-unswitch.o loop-unroll.o	   \
@@ -1458,7 +1458,11 @@ tree-alias-common.o: tree-alias-common.c tree-alias-common.h $(SYSTEM_H) \
 tree-ssa.o : tree-ssa.c $(TREE_FLOW_H) $(CONFIG_H) $(SYSTEM_H) \
    $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) $(GGC_H) output.h diagnostic.h \
    ssa.h errors.h toplev.h function.h $(TIMEVAR_H) tree-alias-common.h \
-   $(TM_H) coretypes.h $(TREE_DUMP_H)
+   $(TM_H) coretypes.h $(TREE_DUMP_H) tree-ssa-live.h
+tree-ssa-live.o : tree-ssa-live.c $(TREE_FLOW_H) $(CONFIG_H) $(SYSTEM_H) \
+   $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) $(GGC_H) output.h diagnostic.h \
+   ssa.h errors.h toplev.h function.h $(TIMEVAR_H) tree-alias-common.h \
+   $(TM_H) coretypes.h $(TREE_DUMP_H) tree-ssa-live.h
 tree-ssa-pre.o : tree-ssa-pre.c $(TREE_FLOW_H) $(CONFIG_H) \
    $(SYSTEM_H) $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) \
    $(GGC_H) output.h diagnostic.h ssa.h errors.h toplev.h $(TIMEVAR_H) \
