* loop-iv.c: New. 	* Makefile.in (loop-iv.o): New. 	* basic-block.h (fast_dominance_info, fast_dominated_by_p, 	fast_dominance_info, release_fq_dominators): Declare. 	* cfgloop.h (struct loop_desc): New fields assumptions, 	noloop_assumptions, infinite, niter_expr. 	(iv_register_values, loop_entry_values, initial_values): Declare. 	(compute_simple_loop_info, initialize_iv_analysis, 	finalize_iv_analysis, analyse_induction_variables, 	iv_load_used_values, get_def_value, get_use_value, 	substitute_into_expr, simplify_iv_using_values, 	iv_simplify_using_initial_values, iv_split, iv_base, iv_step, 	iv_simple_p): Declare. 	* cfgloopanal.c (iv_simple_condition_p, iv_simple_loop_exit_p, 	iv_simple_loop_p, inverse, compute_simple_loop_info): New. 	(mark_irreducible_loops): Fix. 	* df.h (struct ref): Add aux field. 	* dominance.c (create_fq_dominators, release_fq_dominators): New. 	* jump.c (reversed_condition): Moved from ... 	* loop-unswitch.c (reversed_condition): ... here. 	* rtl.c (copy_rtx): Handle new rtl codes. 	* rtl.def (INITIAL_VALUE, VALUE_AT, ITERATION): New rtl codes. 	* rtl.h (reversed_condition, expr_mentions_code_p): Declare. 	* rtlanal.c (expr_mentions_code_p, same_code_p): New. 	* timevar.def (TV_LOOP2, TV_IV_ANAL): New. 	* toplev.c (rest_of_compilation): Use them.  Call iv analysis.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/rtlopt-branch@65278 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -119,7 +119,7 @@ XCFLAGS =
 TCFLAGS =
 CFLAGS = -g
 STAGE1_CFLAGS = -g @stage1_cflags@
-BOOT_CFLAGS = -g -O2 
+BOOT_CFLAGS = -g -O2
 
 # Flags to determine code coverage. When coverage is disabled, this will
 # contain the optimization flags, as you normally want code coverage
@@ -801,11 +801,11 @@ OBJS = alias.o bb-reorder.o bitmap.o builtins.o caller-save.o calls.o	   \
  cfg.o cfganal.o cfgbuild.o cfgcleanup.o cfglayout.o cfgloop.o		   \
  cfgloopanal.o cfgloopmanip.o loop-init.o loop-unswitch.o loop-unroll.o	   \
  cfgrtl.o combine.o conflict.o convert.o cse.o cselib.o dbxout.o	   \
- debug.o df.o diagnostic.o dojump.o doloop.o dominance.o		         \
- dwarf2asm.o dwarf2out.o dwarfout.o emit-rtl.o except.o explow.o	   \
- expmed.o expr.o final.o flow.o fold-const.o function.o 		   \
+ debug.o df.o diagnostic.o dojump.o doloop.o dominance.o loop-iv.o	   \
+ dwarf2asm.o dwarf2out.o dwarfout.o emit-rtl.o except.o explow.o expmed.o  \
+ expr.o final.o flow.o fold-const.o function.o gcse.o gcse-utils.o	   \
  gcse-classic.o gcse-hoist.o gcse-cprop.o gcse-pre.o gcse-store.o	   \
- gcse-null.o gcse.o  gcse-utils.o	   \
+ gcse-null.o gcse.o  gcse-utils.o					   \
  genrtl.o ggc-common.o global.o graph.o gtype-desc.o			   \
  haifa-sched.o hashtable.o hooks.o ifcvt.o insn-attrtab.o insn-emit.o	   \
  insn-extract.o insn-opinit.o insn-output.o insn-peep.o insn-recog.o	   \
@@ -1691,6 +1691,9 @@ loop-init.o : loop-init.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) gcov-io.h \
 loop-unswitch.o : loop-unswitch.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_H) \
    $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h cfglayout.h params.h \
    output.h $(EXPR_H) coretypes.h $(TM_H)
+loop-iv.o : loop-iv.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_H) \
+   $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h cfglayout.h params.h \
+   output.h $(EXPR_H) coretypes.h $(TM_H) function.h df.h
 loop-unroll.o: loop-unroll.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_H) \
    $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h cfglayout.h params.h \
    output.h $(EXPR_H) coretypes.h $(TM_H)
