libffi/ 2003-04-08  Jakub Jelinek  <jakub@redhat.com>
	* include/ffi.h.in (POWERPC64): Define on ppc64.
	(enum ffi_abi): Add FFI_LINUX64, set FFI_DEFAULT_ABI
	to FFI_LINUX64 on ppc64.
	(FFI_CLOSURES): Define to 0 on ppc64.
	* src/powerpc/ppc_closure.S: Surround whole file with
	#ifndef __powerpc64__.
	* src/powerpc/sysv.S: Likewise.
	* src/powerpc/ffi.c (ffi_call): #ifdef out 32-bit ABIs
	on POWERPC64.
	(ffi_prep_closure): Ifdef out on POWERPC64.
	* configure.in: Set TARGET=POWERPC on powerpc64-*-linux*.
	* configure: Rebuilt.

2003-03-21  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>

	* include/ffi.h.in: Define X86 instead of X86_64 in 32
	bit mode.

2003-01-28  Andrew Haley  <aph@redhat.com>

	* include/ffi.h.in: Enable FFI_CLOSURES for x86_64.
	* src/x86/ffi64.c (ffi_prep_closure): New.
	(ffi_closure_UNIX64_inner): New.
	* src/x86/unix64.S (ffi_closure_UNIX64): New.

2003-01-14  Andrew Haley  <aph@redhat.com>

	* src/x86/ffi64.c (ffi_prep_args): Check for void retval.
	(ffi_prep_cif_machdep): Likewise.
	* src/x86/unix64.S: Add unwind info.

libjava/
2003-04-08  Jakub Jelinek  <jakub@redhat.com>

	* configure.host: Add powerpc64*-linux* entry.
	[x86_64-*]: Add DIVIDESPEC.

2003-04-03  Jakub Jelinek  <jakub@redhat.com>

	* configure.host [i?86-*|x86_64-*|powerpc*-*]: Remove
	slow_pthread_self.

2003-03-22  Richard Henderson  <rth@redhat.com>

	* sysdep/ia64/locks.h: Include ia64intrin.h.
	(compare_and_swap): Use __sync_bool_compare_and_swap.
	(compare_and_swap_release): Expose ar.ccv assignment.

2003-02-03  Andrew Haley  <aph@redhat.com>

	* configure.host (x86_64): Enable interpreter.

2003-01-03  Jeff Sturm  <jsturm@one-point.com>

	* configure.host (sparc*-*): Enable bytecode interpreter.

2002-10-08  Ulrich Weigand  <uweigand@de.ibm.com>

	* configure.host [s390*-*]: Enable Java interpreter.
	Enable hash synchronization.  Add sysdeps dir.
	* sysdep/s390/locks.h: New file.

2002-07-30  Jeff Sturm  <jsturm@one-point.com>

	* configure.in (LIBFFIINCS): Don't

--- a/libffi/configure.in
+++ b/libffi/configure.in
@@ -61,7 +61,7 @@ sparc64-*-linux*) TARGET=SPARC; TARGETDIR=sparc;;
 alpha*-*-linux* | alpha*-*-osf* | alpha*-*-freebsd*) TARGET=ALPHA; TARGETDIR=alpha;;
 ia64*-*-*) TARGET=IA64; TARGETDIR=ia64;;
 m68k-*-linux*) TARGET=M68K; TARGETDIR=m68k;;
-powerpc-*-linux* | powerpc-*-sysv*) TARGET=POWERPC; TARGETDIR=powerpc;;
+powerpc*-*-linux* | powerpc-*-sysv*) TARGET=POWERPC; TARGETDIR=powerpc;;
 powerpc-*-beos*) TARGET=POWERPC; TARGETDIR=powerpc;;
 powerpc-*-darwin*) TARGET=POWERPC_DARWIN; TARGETDIR=powerpc;;
 powerpc-*-aix*) TARGET=POWERPC_AIX; TARGETDIR=powerpc;;
