--- a/libmudflap/mf-runtime.h.in
+++ b/libmudflap/mf-runtime.h.in
@@ -6,15 +6,14 @@
 
 #if @MF_HAVE_STDINT_H@ /* autoconf HAVE_STDINT_H */
 #include <stdint.h>
-#else
-# if !defined (HAVE_UINTPTR_T)
-typedef unsigned long uintptr_t;
-# endif
 #endif
+#include <sys/types.h>
+#if ! @MF_HAVE_UINTPTR_T@
+typedef unsigned long uintptr_t;
+#define HAVE_UINTPTR_T 1
 /* Define this here, in case an autoconf application was run
    without CFLAGS=-fmudflap but is being compiled with -fmudflap.  */
-#define HAVE_UINTPTR_T 1
-#include <sys/types.h>
+#endif
 
 
 /* Global declarations used by instrumentation. */
