* Makefile.in (tree-ssa.o): Depend on langhooks.h. 	(tree-dfa.o, tree-cfg.o): Likewise. 	* tree-cfg.c: Include langhooks.h 	(dump_tree_cfg): Revamp how we get the current function's name 	to not rely on current_function_name (and implicitly cfun). 	(dump_cfg_stats, tree_cfg2dot): Likewise. 	* tree-dfa.c: Include langhooks.h 	(dump_immediate_uses): Revamp how we get the current function's name 	to not rely on current_function_name (and implicitly cfun). 	(dump_dfa_stats, dump_alias_info): Likewise. 	* tree-ssa.c: Include langhooks.h 	(dump_tree_ssa): Revamp how we get the current function's name 	to not rely on current_function_name (and implicitly cfun).
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@65690 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1512,7 +1512,7 @@ tree-alias-common.o: tree-alias-common.c tree-alias-common.h $(SYSTEM_H) \
 tree-ssa.o : tree-ssa.c $(TREE_FLOW_H) $(CONFIG_H) $(SYSTEM_H) \
    $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) $(GGC_H) output.h diagnostic.h \
    ssa.h errors.h toplev.h function.h $(TIMEVAR_H) tree-alias-common.h \
-   $(TM_H) coretypes.h $(TREE_DUMP_H) tree-ssa-live.h
+   $(TM_H) coretypes.h $(TREE_DUMP_H) tree-ssa-live.h langhooks.h
 tree-ssa-live.o : tree-ssa-live.c $(TREE_FLOW_H) $(CONFIG_H) $(SYSTEM_H) \
    $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) $(GGC_H) output.h diagnostic.h \
    ssa.h errors.h toplev.h function.h $(TIMEVAR_H) tree-alias-common.h \
@@ -1524,11 +1524,11 @@ tree-ssa-pre.o : tree-ssa-pre.c $(TREE_FLOW_H) $(CONFIG_H) \
 tree-cfg.o : tree-cfg.c $(TREE_FLOW_H) $(CONFIG_H) $(SYSTEM_H) \
    $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) $(GGC_H) flags.h output.h \
    diagnostic.h errors.h function.h $(TIMEVAR_H) $(TM_H) coretypes.h \
-   $(TREE_DUMP_H) except.h
+   $(TREE_DUMP_H) except.h langhooks.h
 tree-dfa.o : tree-dfa.c $(TREE_FLOW_H) $(CONFIG_H) $(SYSTEM_H) \
    $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) $(GGC_H) output.h diagnostic.h \
    errors.h tree-inline.h $(HASHTAB_H) flags.h function.h $(TIMEVAR_H) \
-   tree-alias-common.h convert.h $(TM_H) coretypes.h
+   tree-alias-common.h convert.h $(TM_H) coretypes.h langhooks.h
 tree-optimize.o : tree-optimize.c $(TREE_FLOW_H) $(CONFIG_H) \
    $(SYSTEM_H) $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) \
    $(GGC_H) output.h diagnostic.h ssa.h errors.h flags.h tree-alias-common.h \
