* config/i386/linux.h (NO_PROFILE_COUNTERS): Define to 1. 	* config/i386/freebsd.h (NO_PROFILE_COUNTERS): Likewise. 	* config/i386/x86-64.h (NO_PROFILE_COUNTERS): Likewise. 	* config/i386/netbsd-elf.h (NO_PROFILE_COUNTERS): Likewise. 	* config/xtensa/xtensa.h (NO_PROFILE_COUTNERS): Likewise. 	* config/darwin.h (NO_PROFILE_COUNTERS): Likewise. 	* final.c (NO_PROFILE_COUNTERS): Define to 0 if not defined. 	(profile_function): Allow NO_PROFILE_COUNTERS to be non-constant. 	* config/rs6000/rs6000.c (output_profile_hook): Likewise.
	* configure.in (powerpc*-*, s390*-*): Set tls_as_opt.
	Pass it to $gcc_cv_as.
	* configure: Rebuilt.

	* config/rs6000/rs6000.c (print_operand): Allow TARGET_AIX to be
	non-constant.
	(rs6000_aix_emit_builtin_unwind_init, rs6000_emit_eh_toc_restore):
	Define unconditionally.
	(rs6000_elf_declare_function_name): New function.
	* config/rs6000/rs6000.md (eh_return): Allow TARGET_AIX to be
	non-constant.
	* config/rs6000/linux64.h [!RS6000_BI_ARCH] (TARGET_64BIT): Define
	to 1.
	(DEFAULT_ARCH64_P): Define.
	[IN_LIBGCC2] (TARGET_64BIT): Define based on whether __powerpc64__
	is defined.
	(TARGET_AIX): Define to 1 if TARGET_64BIT.
	(TARGET_RELOCATABLE): Define.
	[RS6000_BI_ARCH] (SUBSUBTARGET_OVERRIDE_OPTIONS, OVERRIDE_OPTIONS,
	ASM_FILE_START): Define.
	(ASM_DEFAULT_SPEC, ASM_SPEC, CPP_ARCH_SPEC, LINK_OS_LINUX_SPEC,
	CPP_PIC_DEFAULT): Define for both -m32 and -m64.
	(MULTILIB_DEFAULTS): Define.
	(SUBSUBTARGET_EXTRA_SPECS): Define.
	(ASM_SPEC32, ASM_SPEC64, ASM_SPEC_COMMON): Define.
	(TARGET_NO_TOC, TARGET_TOC): Define only if !RS6000_BI_ARCH.
	(NO_PROFILE_COUNTERS): Define to TARGET_64BIT.
	(PROFILE_HOOK): Only call output_profile_hook if TARGET_64BIT.
	(ADJUST_FIELD_ALIGN, ROUND_TYPE_ALIGN): Adjust to work properly
	if !TARGET_64BIT.
	(USER_LABEL_PREFIX): Remove.
	(JUMP_TABLES_IN_TEXT_SECTION): Define to TARGET_64BIT.
	(SETUP_FRAME_ADDRESSES): Only call rs6000_aix_emit_builtin_unwind_init
	if TARGET_64BIT.
	(CPP_PREDEFINES): Define to be empty.


--- a/gcc/ada/Makefile.in
+++ b/gcc/ada/Makefile.in
@@ -1259,6 +1259,24 @@ ifeq ($(strip $(filter-out ppc linux%,$(arch) $(osys))),)
   LIBRARY_VERSION := $(strip $(shell grep Library_Version $(fsrcpfx)gnatvsn.ads | sed -e 's/.*GNAT Lib v\(.*\)[ "].*/\1/'))
 endif
 
+ifeq ($(strip $(filter-out powerpc linux%,$(arch) $(osys))),)
+  MLIB_TGT=5lml-tgt
+  MISCLIB=
+  THREADSLIB=-lpthread
+  GNATLIB_SHARED=gnatlib-shared-dual
+  GMEM_LIB=gmemlib
+  LIBRARY_VERSION := $(strip $(shell grep Library_Version $(fsrcpfx)gnatvsn.ads | sed -e 's/.*GNAT Lib v\(.*\)[ "].*/\1/'))
+endif
+
+ifeq ($(strip $(filter-out powerpc64 linux%,$(arch) $(osys))),)
+  MLIB_TGT=5lml-tgt
+  MISCLIB=
+  THREADSLIB=-lpthread
+  GNATLIB_SHARED=gnatlib-shared-dual
+  GMEM_LIB=gmemlib
+  LIBRARY_VERSION := $(strip $(shell grep Library_Version $(fsrcpfx)gnatvsn.ads | sed -e 's/.*GNAT Lib v\(.*\)[ "].*/\1/'))
+endif
+
 ifeq ($(strip $(filter-out s390 linux%,$(arch) $(osys))),)
   MLIB_TGT=5lml-tgt
   MISCLIB=
