libffi/ 	* include/ffi.h.in [POWERPC64] (FFI_CLOSURE): Define to 1. 	(FFI_TRAMPOLINE_SIZE): Define to 24 on POWERPC64. 	* src/powerpc/ffi.c (hidden): Define. 	(ffi_prep_args_SYSV): Renamed from 	ffi_prep_args.  Cast pointers to unsigned long to shut up warnings. 	(NUM_GPR_ARG_REGISTERS64, NUM_FPR_ARG_REGISTERS64, 	ASM_NEEDS_REGISTERS64): New. 	(ffi_prep_args64): New function. 	(ffi_prep_cif_machdep): Handle FFI_LINUX64 ABI. 	(ffi_call): Likewise. 	(ffi_prep_closure): Likewise. 	(flush_icache): Surround by #ifndef POWERPC64. 	(ffi_dblfl): New union type. 	(ffi_closure_helper_SYSV): Use it to avoid aliasing problems. 	(ffi_closure_helper_LINUX64): New function. 	* src/powerpc/sysv.S (ffi_call_SYSV): Rename ffi_prep_args to 	ffi_prep_args_SYSV. 	* src/powerpc/linux64.S: New file. 	* src/powerpc/linux64_closure.S: New file. 	* Makefile.am (EXTRA_DIST): Add src/powerpc/linux64.S and 	src/powerpc/linux64_closure.S. 	(TARGET_SRC_POWERPC): Likewise.
	* src/ffitest.c (closure_test_fn, closure_test_fn1, closure_test_fn2,
	closure_test_fn3): Fix result printing on big-endian 64-bit
	machines.
	(main): Print tst2_arg instead of uninitialized tst2_result.

	* src/ffitest.c (main): Hide what closure pointer really points to
	from the compiler.
libjava/
	* configure.host (powerpc64-*-linux*): Use libffi and gij even if
	-m64.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@65995 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libffi/include/ffi.h.in
+++ b/libffi/include/ffi.h.in
@@ -437,12 +437,12 @@ struct ffi_ia64_trampoline_struct {
 
 #elif defined(POWERPC)
 
-#if defined(POWERPC64)
-#define FFI_CLOSURES 0
-#else
 #define FFI_CLOSURES 1
-#endif
+#ifdef POWERPC64
+#define FFI_TRAMPOLINE_SIZE 24
+#else
 #define FFI_TRAMPOLINE_SIZE 40
+#endif
 #define FFI_NATIVE_RAW_API 0
 
 #elif defined(POWERPC_DARWIN)
