* configure.in (HAVE_RO_EH_FRAME): Check whether .eh_frame section 	should be read-only. 	* configure: Rebuilt. 	* fficonfig.h.in: Rebuilt. 	* include/ffi.h.in (EH_FRAME_FLAGS): Define. 	* src/alpha/osf.S: Use EH_FRAME_FLAGS. 	* src/powerpc/linux64.S: Likewise. 	* src/powerpc/linux64_closure.S: Likewise.  Include ffi.h. 	* src/powerpc/sysv.S: Use EH_FRAME_FLAGS.  Use pcrel encoding 	if -fpic/-fPIC/-mrelocatable. 	* src/powerpc/powerpc_closure.S: Likewise. 	* src/sparc/v8.S: If HAVE_RO_EH_FRAME is defined, don't include 	#write in .eh_frame flags. 	* src/sparc/v9.S: Likewise. 	* src/x86/unix64.S: Use EH_FRAME_FLAGS. 	* src/x86/sysv.S: Likewise.  Use pcrel encoding if -fpic/-fPIC. 	* src/s390/sysv.S: Use EH_FRAME_FLAGS.  Include ffi.h.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@66101 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libffi/fficonfig.h.in
+++ b/libffi/fficonfig.h.in
@@ -71,3 +71,6 @@
 
 /* Define if your assembler and linker support unaligned PC relative relocs.  */
 #undef HAVE_AS_SPARC_UA_PCREL
+
+/* Define if .eh_frame sections should be read-only. */
+#undef HAVE_RO_EH_FRAME
